<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <com.airbnb.lottie.LottieAnimationView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_rawRes="@raw/bghome"
        app:lottie_colorFilter="@color/colorPrimary"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHeder"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_height"
            android:background="@drawable/bg_primary_bottom_big_rounded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:background="@android:color/transparent"
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:text="Seleksi Android"
                android:layout_marginStart="20dp"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:id="@+id/cl_people"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clHeder"
        android:layout_marginStart="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_people"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg_btn_primary_rounded"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/home_people"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/colorWhite"
            android:gravity="start|center"
            android:paddingStart="20dp"
            android:drawableEnd="@drawable/ic_person"
            android:paddingEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:id="@+id/cl_film"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_people"
        android:layout_marginStart="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_film"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg_btn_primary_rounded"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/home_film"
            android:backgroundTint="@color/colorAccentDark"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/colorWhite"
            android:gravity="start|center"
            android:paddingStart="20dp"
            android:drawableEnd="@drawable/ic_move"
            android:paddingEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:id="@+id/cl_planet"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_film"
        android:layout_marginStart="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_planet"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg_btn_primary_rounded"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/home_planet"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/colorWhite"
            android:gravity="start|center"
            android:paddingStart="20dp"
            android:drawableEnd="@drawable/ic_planet"
            android:paddingEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:id="@+id/cl_spesies"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_planet"
        android:layout_marginStart="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg_btn_primary_rounded"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/home_species"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/colorWhite"
            android:gravity="start|center"
            android:paddingStart="20dp"
            android:drawableEnd="@drawable/ic_spesies"
            android:paddingEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:id="@+id/cl_vehicles"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_spesies"
        android:layout_marginStart="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg_btn_primary_rounded"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/home_vehicles"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/colorWhite"
            android:gravity="start|center"
            android:paddingStart="20dp"
            android:drawableEnd="@drawable/ic_vehicles"
            android:paddingEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:id="@+id/cl_ship"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_vehicles"
        android:layout_marginStart="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg_btn_primary_rounded"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="Ship"
            android:backgroundTint="@color/colorAccentDark"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/colorWhite"
            android:gravity="start|center"
            android:paddingStart="20dp"
            android:drawableEnd="@drawable/ic_ship"
            android:paddingEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>